[gd_scene load_steps=9 format=3 uid="uid://x300tatfo4q3"]

[ext_resource type="Texture2D" uid="uid://tincsg00r8v7" path="res://assets/Background.png" id="1_3oadf"]
[ext_resource type="Texture2D" uid="uid://d3pxd7f3mgm11" path="res://assets/honeycomb_atlas.png" id="2_81eqc"]
[ext_resource type="Script" path="res://scenes/HoneycombGrid.gd" id="3_xhg5j"]
[ext_resource type="Script" path="res://scripts/LevelUI.gd" id="4_5tfux"]
[ext_resource type="PackedScene" uid="uid://ds2nfpgplfthl" path="res://scenes/game_state_manager.tscn" id="5_qa1fl"]
[ext_resource type="Script" path="res://scripts/game_state_manager.gd" id="6_uj883"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y7a3w"]
texture = ExtResource("2_81eqc")
margins = Vector2i(4, 4)
separation = Vector2i(11, 8)
texture_region_size = Vector2i(73, 64)
0:1/0 = 0
0:0/0 = 0
2:0/0 = 0
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
1:2/next_alternative_id = 2
1:2/0 = 0
1:2/1 = 1
1:2/1/custom_data_0 = true
0:2/0 = 0
0:3/0 = 0
1:3/next_alternative_id = 2
1:3/0 = 0
1:3/1 = 1
1:3/1/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_rgycn"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(73, 64)
custom_data_layer_0/name = "has_grub"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_y7a3w")

[node name="LevelContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_3oadf")
expand_mode = 1
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HoneycombGrid" type="TileMap" parent="MarginContainer/CenterContainer"]
position = Vector2(-120, -80)
tile_set = SubResource("TileSet_rgycn")
format = 2
script = ExtResource("3_xhg5j")

[node name="LevelUI" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("4_5tfux")

[node name="GrubsCount" type="TextureRect" parent="LevelUI"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="GrubCountLabel" type="Label" parent="LevelUI/GrubsCount"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 81.0
offset_bottom = 26.0
text = "Grubs left:"

[node name="TimeCount" type="TextureRect" parent="LevelUI"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="TimerLabel" type="Label" parent="LevelUI/TimeCount"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 43.0
offset_bottom = 26.0
text = "Time:"

[node name="RestartButton" type="Button" parent="LevelUI"]
layout_mode = 2
size_flags_vertical = 4
text = "Restart"

[node name="MenuButton" type="Button" parent="LevelUI"]
layout_mode = 2
size_flags_vertical = 4
text = "Main Menu"

[node name="GameStateManager" parent="." node_paths=PackedStringArray("grid", "ui") instance=ExtResource("5_qa1fl")]
script = ExtResource("6_uj883")
grid = NodePath("../MarginContainer/CenterContainer/HoneycombGrid")
ui = NodePath("../LevelUI")

[node name="Timer" type="Timer" parent="GameStateManager"]
autostart = true

[connection signal="pressed" from="LevelUI/RestartButton" to="LevelUI" method="_on_restart_button_pressed"]
[connection signal="pressed" from="LevelUI/MenuButton" to="LevelUI" method="_on_menu_button_pressed"]
[connection signal="timeout" from="GameStateManager/Timer" to="GameStateManager" method="_on_timer_timeout"]
